# quant-engine

./: .dockerignore  .gitattributes  .gitignore  AUDIT_REPORT_VALIDATION.md  AWS_DEPLOY.md  BENCHMARK_RELATIVE_CANDIDATE_QUALITY_SPEC.md  CHRONOS_AGREEMENT_GATE.md  COMPARATIVE_QUANT_RESEARCH_AUDIT.md  DEPLOY.md  Dockerfile  ExecutionAgent.mq5  HARD_RISK_PAUSE.md  IMPLEMENTATION_BUILD_PLAN.md  IMPLEMENTATION_SAFETY_PROMPTS.md  JSON.mqh  MARKET_SHORT_GUARD.md  MODEL_LINEAGE_RESET_REFACTOR_SPEC.md  MODEL_PROMOTION_RUNBOOK.md  MODEL_QUALITY_RECOVERY_SPEC.md  MODEL_RECOVERY_DATA_CONNECTIVITY_SPEC.md  MODEL_RECOVERY_EXPERIMENT_RUNNER_SPEC.md  MODEL_RESEARCH_GAP_CLOSURE_SPEC.md  PRODUCTION_REFACTOR_ROADMAP.md  PRODUCTION_RESUME_GATE_RECOVERY_SPEC.md  README.md  REGIME2_REVERSION_TREATMENT.md  SECURITY.md  SECURITY_AUDIT_ROADMAP.md  TRADE_OUTCOME_SIDE_SEMANTICS_REPAIR_SPEC.md  audit_report.md  clear_breach.sql  debug_market_data.py  debug_market_data_v2.py  demo.py  demo_populate_db.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  extract_features.py  final_7_percent_audit_report.md  (+12 more)
.claude/: settings.json
.github/: dependabot.yml
analysis/: __init__.py
batch/: __init__.py  aggregation.py  batch_runner.py  models.py  ranker.py  run_batch.py
config/: competition_crypto_symbols.py  competition_flags.py  competition_fx_symbols.py  competition_leverage.py  execution_policies.py  execution_policy_guard.py  policies.py
data/: market_loader.py  schemas.py
deploy/: dead_mans_switch.sh  ec2_bootstrap.sh  flatten_on_shutdown.sh  quant_bot_flatten.service  setup_cloudwatch.sh  setup_swap.sh
docs/: CRG3_CI_EVIDENCE.md  CRG3_EVIDENCE_SCHEMA.json  DEFERRED_HARDENING.md  IMPLEMENTATION_REPORT_TEMPLATE.md  KEY_ROTATION_AND_ARCHIVE_CLEANUP.md  MT5_LEVERAGE_GUIDE.md  NATIVE_TORCH_CONFIRMATION_ROADMAP.md  PRODUCTION_READINESS.md  PUBLIC_RELEASE_CHECKLIST.md  WP00_CONTAINMENT_RUNBOOK.md  WP01_SOURCE_RECONCILIATION.md  WP02_REPRODUCIBLE_BUILD.md
engine/: decision_queue.py  replay_engine.py
evaluation/: longitudinal.py  metrics.py  policy.py  walk_forward.py
execution/: simulator.py
execution_live/: __init__.py  adapter.py  event_logger.py  events.py  order_models.py  paper_broker.py  risk_checks.py  service.py
hypotheses/: mean_reversion_exhaustion.py  registry.py  session_open_impulse.py  volatility_breakout.py  volatility_compression.py
market/: __init__.py  regime.py
orchestrator/: check_decay.py  run_batch.py  run_evaluation.py  run_meta.py  run_portfolio.py
portfolio/: engine.py  ensemble.py  meta_engine.py  models.py  risk.py  risk_scaling.py
promotion/: __init__.py  decay.py  evaluator.py  rules.py
quant/: __init__.py  config.py  run_research.py
quant_legacy/: README.md
quant_v2/: __init__.py  config.py  contracts.py  model_registry.py
requirements/: build.in  runtime.in  test.in
results/: competition_crypto_log.jsonl  competition_live_log.jsonl  live_crypto_state.json  live_state.json  paper_log.jsonl  research.db.bak  research.db.pre_run_backup  sim_pipeline_log.jsonl  sim_state.json
scratch/: full_retrain_phase13.py  rollback_feb20.py  run_backtest.py  test_bugfix_verify.py  test_inference.py  test_retrain_phase13.py  trigger_retrain.py
scripts/: build_release.ps1  check_decay.py  deploy_readiness.ps1  generate_synthetic_meta_csv.py  model_quality_recovery.py  run_batch.py  run_batch_runner.py  run_competition_eval.py  run_competition_live.py  run_evaluation.py  run_meta.py  run_model_recovery_experiments.py  (+3 more)
(+342 files in other folders)
