[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis-research-engine"
version = "0.1.0"
description = "Research-grade deterministic market replay engine for evaluating trading hypotheses"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "HRE Team"}
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analysis*",
    "batch*",
    "clock*",
    "config*",
    "data*",
    "engine*",
    "evaluation*",
    "execution*",
    "execution_live*",
    "hypotheses*",
    "market*",
    "orchestrator*",
    "portfolio*",
    "promotion*",
    "state*",
    "storage*",
]

[tool.mypy]
exclude = '''
(?x)(
    analysis/regime\.py
  | promotion/models\.py
)
'''
