[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-engine"
version = "1.0.0"
description = "Statistically defensible short-horizon directional prediction engine for crypto markets"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "QRE Team"}
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "quant*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
